# Base-Vulkan-Config

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.sh
include/: CMakeLists.txt
include/imgui/: CMakeLists.txt
res/models/: canard.blend  canard.blend1  canard.mtl
shaders/: frag_test.glsl  hfgghpfj.py  prepro.vert  test.vert.spv  vert_test.glsl
src/: CMakeLists.txt  camera.cpp  camera.h  main.cpp  models.h  shader.cpp  shader.h
